--- a/webmagic-extension/pom.xml
+++ b/webmagic-extension/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>webmagic-extension</artifactId>
+    <artifactId>mxj-webmagic-extension</artifactId>
 
     <dependencies>
         <dependency>
